<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".MainActivity"
    app:constraintSet="@+id/start"
    app:layoutDescription="@xml/activity_main_scene">

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/ahln_ramadan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/hello_ramdan"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/aftar_ramdan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_rawRes="@raw/ahln_ramadan"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:text="@string/swipe"/>

    <TextView
        android:id="@+id/ramdan_tips"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/tips"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/muslim_life"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:lottie_rawRes="@raw/muslim_life_style"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp"
        android:backgroundTint="#fceffe"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/muslim_life">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:fontFamily="@font/noto_sans"
                android:padding="8dp"
                android:text="@string/first_tip"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:padding="8dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/second_tip"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:padding="8dp"
                android:fontFamily="@font/noto_sans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/third_tip"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:padding="8dp"
                android:fontFamily="@font/noto_sans"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tip"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:padding="8dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/fifth_tip"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_marginVertical="8dp"
                android:background="@drawable/text_view_background"
                android:padding="8dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:text="@string/six_tip"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.motion.widget.MotionLayout>